--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html>
+	<head>
+	<title>Fint Sign Up</title>
+<link rel="stylesheet" type="text/css" href="style1.css">
+</head>
+<body>
+	<div class="container">
+		<div class="circle1"></div> 
+	<div class="circle2"></div> 
+	</div>
+	<form>
+		<h3>SIGN UP!
+			<span>SIGN UP with your active email</span>
+		</h3>
+		
+		<label for="Name">Name</label> 
+		<input type="text" placeholder="Enter Your Full Name" id="Name">
 
+		<label for="Email">Email</label> 
+		<input type="text" placeholder="Enter Your Email" id="Email">
+
+		<label for="Password">Password</label> 
+		<input type="text" placeholder="**************************** Enter your Password" id="Password">
+		<center>
+		<a href="snack.html">
+			<button>
+				SIGN UP
+			</button>
+		</a>
+	</center>
+	</form>
+	
+</body>
+</html>
